@@ -45,6 +45,15 @@ New in spot 2.9.1.dev  (not yet released)
     file. With this refactoring, we can retrieve both a kripke or a
     kripkecube from a PINS file.
 
+  Bugs fixed:
+
+  - ltlcross --csv=... --product=N with N>0 could output spurious
+    diagnosics claiming that words were rejected when evaluating
+    the automaton on state-space.
+
+  - spot::scc_info::determine_unknown_acceptance() now also update the
+    result of spot::scc_info::one_accepting_scc().
+
 New in spot 2.9.1 (2020-07-15)
 
   Command-line tools:
